import java.io.Serializable;

public class Player implements Serializable {
    public String name;
    Player(String name){
        this.name = name;
    }
}
