@startuml
'https://plantuml.com/class-diagram

abstract class Main {
    main()
}
'abstract AbstractCollection
class Setup
Main <- Setup
class Character_Creation{

}
Main <-- Character_Creation
class Player {

}
Main <-- Player
Character_Creation <- Player
Interface Allies {

}
Player <-- Allies
class Inventory {

}
Player <- Inventory
Interface Place {

}
Main <-- Place
Abstract Class Item{

}
Inventory <-- Item
Interface Weapon{

}
Item <|-- Weapon
Interface Armour{

}
Item <|-- Armour
Interface Consumables{

}
Item <|-- Consumables
Interface Accessories{

}
Item <|-- Accessories
Interface Enchantments{

}
Enchantments -> Item
Interface Currency{

}
Item <|-- Currency
Interface Enemies{

}
Enemies <-- Item
Place <-- Enemies
class Combat {

}
class FileIO{

}
Main <- FileIO
Combat --> Main
Combat <-- Place
Combat <-- Player

Interface Boons {

}
Player <-- Boons
Place <-- Boons
@enduml